Changes in the open/leave endpoints
